--- a/xtx-pc/css/common.css
+++ b/xtx-pc/css/common.css
@@ -153,3 +153,75 @@
 }
 
 
+/* 版权footer */
+.footer{
+    height: 342px;
+    background-color: #333;
+}
+
+.footer .wrapper{
+    width: 1393px;
+}
+
+.footer .top{
+    padding-left: 135px;
+    padding-top: 59px;
+    height: 175px;
+    border-bottom: 3px solid #434343;
+}
+
+.footer .top li{
+    position: relative;
+    float:left;
+    margin-right: 300px;
+    height: 58px;
+    width: 195px;
+    line-height: 58px;
+}
+
+.footer .top li:last-child{
+    margin-right: 0;
+}
+
+/* 伪元素添加标签 */
+.footer .top li::before{
+    position: absolute;
+    /* display: inline-block; */
+    left:0;
+    top: 0;
+    content: '';
+    width: 58px;
+    height: 58px;
+    background-image: url(../images/sprites.png);
+    vertical-align: middle;
+}
+
+.footer .top li span{
+    margin-left: 77px;
+    font-size: 28px;
+    color: #fff;
+}
+
+.footer .top li:nth-child(2)::before{
+    background-position: -65px 0;
+}
+
+.footer .top li:last-child::before{
+    background-position: -130px 0;
+}
+
+.footer .bottom{
+    margin-top: 40px;
+    font-size: 14px;
+    color:#999 ;
+    text-align: center;
+}
+
+.footer .bottom a{
+    font-size: 14px;
+    color:#999 ;
+}
+
+.footer .bottom p{
+    margin-bottom: 30px;
+}
